--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@types/bcrypt": "^5.0.2",
         "@types/passport-jwt": "^4.0.1",
         "bcrypt": "^6.0.0",
+        "class-validator": "^0.14.2",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.2",
