fix: update @nestjs/jwt to correct version and Dockerfile for Render

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,25 @@
+# .dockerignore - Versão completa
 node_modules
-dist
-logs
-coverage
+npm-debug.log
+Dockerfile
+.dockerignore
+.git
+.gitignore
+README.md
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+.nyc_output
+coverage
+.cache
+dist
+.DS_Store
+docker-compose.yml
+*.log
+logs
+*.tgz
+*.tar.gz
+.vscode
+.idea
