--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
         "db:down": "docker-compose down",
         "db:migrate": "prisma migrate dev",
         "db:generate": "prisma generate",
-        "db:studio": "prisma studio",
+        "db:studio": "docker-compose exec app pnpm prisma studio",
         "db:deploy": "prisma migrate deploy",
-        "generate:env": "node scripts/generate-env.js",
-        "generate:keys": "node scripts/generate-keys.js",
         "prepare": "husky"
     },
     "lint-staged": {
@@ -41,7 +39,7 @@
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
-        "@nestjs/jwt": "^11.0.5",
+        "@nestjs/jwt": "^11.0.0",
         "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^11.0.1",
