--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@prisma/client": "^6.9.0",
         "@types/bcrypt": "^5.0.2",
         "@types/passport-jwt": "^4.0.1",
+        "axios": "^1.10.0",
         "bcrypt": "^6.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
