--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "class-validator": "^0.14.2",
         "dotenv": "^17.2.0",
         "exceljs": "^4.4.0",
+        "genai": "^0.0.18",
         "multer": "^2.0.1",
         "nestjs-pino": "^4.4.0",
         "passport": "^0.7.0",
