--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "bcrypt": "^6.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
+        "date-fns-tz": "^3.2.0",
         "dotenv": "^17.2.0",
         "exceljs": "^4.4.0",
         "genai": "^0.0.18",
