--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "date-fns-tz": "^3.2.0",
+        "diacritics": "^1.3.0",
         "dotenv": "^17.2.0",
         "exceljs": "^4.4.0",
         "genai": "^0.0.18",
